--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://partnerdetailerscloudstack.github.io/Why-scheduling-and-CRM-integration-matter-in-auto-detailing-software/">https://partnerdetailerscloudstack.github.io/Why-scheduling-and-CRM-integration-matter-in-auto-detailing-software/</a><br>
+                <a target="_bLank" href="https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Why+scheduling+and+CRM+integration+matter+in+auto+detailing+software/index.html">https://partnerdetailersmovement.s3.us-east-005.backblazeb2.com/Why+scheduling+and+CRM+integration+matter+in+auto+detailing+software/index.html</a><br>
+                <a target="_bLank" href="https://why-scheduling-and-crm-integratio-git-d6760a-detailers-projects.vercel.app/">https://why-scheduling-and-crm-integratio-git-d6760a-detailers-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://sparkly-kitsune-f31a12.netlify.app/">https://sparkly-kitsune-f31a12.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
